@@ -1,20 +1,20 @@
 .TH "EVALGLARE" "1" "2016-06-15" "RADIANCE" "Radiance Manual"
 .SH "NAME"
-evalglare (version v2.05) - determines and evaluates glare sources within a 180 degree fisheye HDR image
+evalglare (version v2.07) - determines and evaluates glare sources within a 180 degree fisheye HDR image
 .br
 
 .SH "SYNOPSIS"
-\fBevalglare \fR[ \fB-s \fR] [ \fB-y \fR] [ \fB-Y \fR\fIvalue\fR ] [ \fB-A \fR\fImaskfile\fR ][ \fB-B \fR\fIangle\fR ] [ \fB-b \fR\fIfactor\fR ] [ \fB-c \fR\fIcheckfile\fR ] [ \fB-f\fR ] [ \fB-t \fR\fIxpos\fR \fIypos\fR \fIangle\fR ] [ \fB-T \fR\fIxpos\fR \fIypos\fR \fIangle\fR ] [ -d ] [ \fB-r \fR\fIangle\fR ] [ \fB-i \fR\fIEv\fR ] [ \fB-I \fR\fIEv\fR \fIyfill_max\fR \fIy_fill_min\fR ] [ \fB-v \fR] [ \fB-V \fR] [ \fB-g \fR\fItype\fR ] [ \fB-G \fR\fItype\fR ] [\fB-q\fR \fImode\fR ][ \fB-u \fR\fIr\fR \fIg\fR \fIb\fR ] [ \fB-vf \fR\fIviewfile\fR ] [ \fB-vt\fR\fIt\fR ] [ \fB-vv \fR\fIvertangle\fR ] [ \fB-vh \fR\fIhorzangle\fR ] [\fIhdrfile\fR]
+\fBevalglare \fR[ \fB-s \fR] [ \fB-y \fR] [ \fB-Y \fR\fIvalue\fR ] [ \fB-A \fR\fImaskfile\fR ][ \fB-B \fR\fIangle\fR ] [ \fB-b \fR\fIfactor\fR ] [ \fB-c \fR\fIcheckfile\fR ] [ \fB-f\fR ] [ \fB-t \fR\fIxpos\fR \fIypos\fR \fIangle\fR ] [ \fB-T \fR\fIxpos\fR \fIypos\fR \fIangle\fR ] [ -d ] [ \fB-r \fR\fIangle\fR ] [ \fB-i \fR\fIEv\fR ] [ \fB-I \fR\fIEv\fR \fIyfill_max\fR \fIy_fill_min\fR ] [ \fB-v \fR] [ \fB-V \fR] [ \fB-g \fR\fItype\fR ] [ \fB-G \fR\fItype\fR ] [\fB-q\fR \fBbackground_luminance_mode\fR ][ \fB-u \fR\fIr\fR \fIg\fR \fIb\fR ] [ \fB-vf \fR\fIviewfile\fR ] [ \fB-vt\fR\fIt\fR ] [ \fB-vv \fR\fIvertangle\fR ] [ \fB-vh \fR\fIhorzangle\fR ] [\fIhdrfile\fR]
 .br
 
 .SH "DESCRIPTION"
 \fBEvalglare \fRdetermines and evaluates glare sources within a 180 degree fisheye image, given in the RADIANCE image format (.pic or .hdr). If \fIhdrfile\fR is not given as an argument, the standard input is read.  The image should be rendered as fisheye (e.g.  using the \fB-vt\fR\fIa\fR or \fB-vt\fR\fIh\fR option) using 180 degrees for the horizontal and vertical view angle (\fB-vv \fR\fI180\fR, \fB-vh \fR\fI180\fR.)  Due to runtime reasons of the \fBevalglare \fRcode, the image should be smaller than 1500x1500 pixels. The recommended size is 1000x1000 pixels, the minimum recommended size is 800x800 pixels.  In the first step, the program uses a given threshold to determine all glare sources.  Three different threshold methods are implemented.  The recommended method is to define a task area by \fB-t \fRor \fB-T \fRoption.  In this (task) area the average luminance is calculated. Each pixel, exceeding this value multiplied by the \fB-b \fRfactor, default 5, is treated as a potential glare source.  The other two methods are described below, see \fB-b\fR.  In the second step the program tries to merge glare source pixels to one glare source, when they are placed nearby each other.  This merging is performed between search areas, given by an opening angle \fB-r\fR, default 0.2 radians.  If a check file is written \fB-c \fRfname, the detected glare sources will be colored to different colors where the rest of the image is set to gray. The luminance values of all pixels are kept to the initial value. The color is chosen by chance, no significance is given by the color. Using the option \fB-u\fR \fIr\fR \fIg\fR \fIb\fR applies a uniform coloring of the glare sources.  Luminance peaks can be extracted to separate glare sources by using the \fB-y \fRor \fB-Y \fR\fIvalue\fR option (default since version v0.9c).  The default value \fB-y \fRis 50000 cd/m2, which can be changed by using the \fB-Y \fR\fIvalue\fR option.  A smoothing option, \fB-s\fR, counts initial non-glare source pixels to glare sources, when they are surrounded by a glare source.
 .br
 
-The program calculates the daylight glare probability (DGP) as well as other glare indexes (DGI, DGI_MOD, UGR, UGR_EXP, VCP, CGI, UDP) to the standard output.  The DGP describes the fraction of persons disturbed caused by glare from daylight as a number from 0 to 1, where 0 is no-one disturbed and 1 is everyone.  Values lower than 0.2 are out of the range of the user assessment tests, where the program is based on and should be interpreted carefully.  A low light correction is applied to the DGP when the vertical illumiance is lower than 500 lux.  By the use of \fB-g \fRor \fB-G \fRthe field of view is cut according the the definition of Guth. (***citation here)  The option \fB-B \fRangle (in radians) calculates the average luminance of a horizontal band.  In the case of non-180 degree images, an external measured illuminance value can be provided by using the \fB-i \fRor \fB-I \fRoption.  The use of the \fB-I \fRoption enables the filling up of images, which are horizontally cut.  The age correction is not supported any more and disabled.
+The program calculates the daylight glare probability (DGP) as well as other glare indexes (DGI, DGI_MOD, UGR, UGR_EXP, VCP, CGI, UDP) to the standard output.  The DGP describes the fraction of persons disturbed caused by glare from daylight as a number from 0 to 1, where 0 is no-one disturbed and 1 is everyone.  Values lower than 0.2 are out of the range of the user assessment tests, where the program is based on and should be interpreted carefully.  A low light correction is applied to the DGP when the vertical illumiance is lower than 500 lux.  By the use of \fB-g \fRor \fB-G \fRthe field of view is cut according the the definition of Guth.  The option \fB-B \fRangle (in radians) calculates the average luminance of a horizontal band.  In the case of non-180 degree images, an external measured illuminance value can be provided by using the \fB-i \fRor \fB-I \fRoption.  The use of the \fB-I \fRoption enables the filling up of images, which are horizontally cut.  The age correction is not supported any more and disabled.
 .br
 
-A masking option \fB-A \fRenables the user to specify an area to be statistically analysed (e.g. the window). Masking is applied after glare source detecting, therefore it has no influence on most of the metrics. The maskfile must be of the same size than the evaluated image. The maskfile simply defines the area to be statistically evaluated in the evaluation image. All pixels larger than 0 in the masking pic define the masking area. For the masked area in the evaluation image, the average luminance, median luminance, 75% and 95% percentile luminance, the min and max luminance as well as the PSGV are calculated. The PSGV can be only used, when the masking area is a window and the camera viewing direction is facing perpendicular to the facade (restriction of PSGV). Masking requires the \fB-d \fRoption and may not be combined with the zoning options \fB-l \fRor \fB-L\fR.
+A masking option \fB-A \fRenables the user to specify an area to be statistically analysed (e.g. the window). Masking is applied after glare source detecting, therefore it has no influence on most of the metrics. The maskfile must be of the same size than the evaluated image. The maskfile simply defines the area to be statistically evaluated in the evaluation image. All pixels larger than 0 in the masking pic define the masking area. For the masked area in the evaluation image, the average luminance, median luminance, 75% and 95% percentile luminance, the min and max luminance, the illuminance of the masked area Ev_mask as well as the PSGV (PGSVsat, PGSVcon and PGSV) are calculated. The PSGV can be only used, when the masking area is a window and the camera viewing direction is facing perpendicular to the facade (restriction of PSGV). Masking requires the \fB-d \fRoption and may not be combined with the zoning options \fB-l \fRor \fB-L\fR.
 .br
 
 Circular zone evaluation can be activated by \fB-l \fR(one zone) or \fB-L \fR(two zones). If two zones are selected they share the same center. The center of the zone(s) can be specified by the x and y coordinates. The size of the zone(s) is specified by the opening angle(s) in radians. If glare sources crosses the border of a zone, then this glare source will be split up into two or three glare sources, so that no glare source is crossing the border of a zone any more. For each glare source the zonal location is given in the glare source section of the detailed output. Glare sources outside zone 1 or zone 2 are labelled as zone 0. For each zone following values are calculated: The average luminance, median luminance, 75% and 95% percentile luminance, the min and max luminance. Zoning requires the \fB-d \fRoption.
@@ -35,10 +35,11 @@ The header of the image is checked for obvious mistakes (but not for all possibl
    -invalid view specified. This might be caused by the use of pcomb or pcompos in advance. Evalglare is stopping. View can be overwritten by giving view options to the command line (see below)
 .br
 
+   
 .br
 \fB-A \fR\fImasking-file\fR
 .br
-	Use a masking file to enable statistical analysis on a certain area. Does not affect glare source detection. The masking threshold is 0.1 cd/m2 (all pixels exceeding 0.1 cd/m2 are treated as "inside" the mask.)
+	Use a masking file to enable statistical analysis on a certain area. Does not affect glare source detection. The masking threshold is 0.1 cd/m2 (all pixels exceeding 0.1 cd/m2 are treated as "inside" the mask.) The PGSV equations are also calculated, but require the masking area to be the window.
 .br
 	It requires the -d option. The result of the analysis of the masking area is given in the first line of the output. Should not be combined with \fI-l\fR or \fI-L\fR options.
 .br
@@ -52,7 +53,7 @@ The header of the image is checked for obvious mistakes (but not for all possibl
 
 \fB-b \fR\fIfactor\fR
 .br
-       Threshold factor; if \fIfactor\fR is larger than 100, it is used as constant threshold in cd/m2, regardless if a task position is given or not. If \fIfactor\fR is less or equal than 100 and a task position is given, this \fIfactor\fR multiplied by the average task luminance will be used as threshold for detecting the glare sources. If \fIfactor\fR is less than or equal to 100 and no task position is given, this factor multiplied by the average luminance in the entire picture will be used as threshold for detecting the glare sources (not recommended). Default value of \fIfactor\fR is 2000 (fixed threshold method).
+       Threshold factor; if \fBfactor\fR is larger than 100, it is used as constant threshold in cd/m2, regardless if a task position is given or not. If \fBfactor\fR is less or equal than 100 and a task position is given, this \fIfactor\fR multiplied by the average task luminance will be used as threshold for detecting the glare sources. If \fBfactor\fR is less than or equal to 100 and no task position is given, this factor multiplied by the average luminance in the entire picture will be used as threshold for detecting the glare sources (not recommended). Default value of \fIfactor\fR is 2000 (fixed threshold method).
 .br
 
 \fB-c \fR\fIfname\fR
@@ -110,7 +111,7 @@ The header of the image is checked for obvious mistakes (but not for all possibl
 .br
       
 .br
-\fB-q\fR \fImode\fR toggle modes for the background luminance calculation: 0 (default): CIE-mode Lb=(Ev-Edir)/pi; 1: Lb= mathematical average luminance without glare sources; 2(not recommended): Lb=Ev/pi
+\fB-q\fR \fBmode\fR toggle modes for the background luminance calculation: 0 (default): CIE-mode Lb=(Ev-Edir)/pi; 1: Lb= mathematical average luminance without glare sources; 2(not recommended): Lb=Ev/pi
 .br
 
 \fB-r \fR\fIangle\fR
